- remove javafx dependancy (not really useful and takes a LOT of space) - lower java version required to 17